--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -126,6 +126,7 @@
 			contentAudio.setAttribute('controls', '');
 			contentAudio.setAttribute('autoplay', '');
 			contentAudio.src = "{{ response_path }}";
+			console.log("{{response_path}}");
 			content.appendChild(contentAudio);
 		}
 
